[gd_scene load_steps=11 format=3 uid="uid://bltg8i5j75slv"]

[ext_resource type="Script" path="res://scenes/core/main_menu.gd" id="2_qmcka"]
[ext_resource type="PackedScene" uid="uid://bg18jengd0jtn" path="res://scenes/core/assets/mm_Map.tscn" id="3_2i0mj"]
[ext_resource type="Script" path="res://scenes/core/assets/web_map_loader.gd" id="4_6ktwf"]
[ext_resource type="FontFile" uid="uid://dlacn5if5v51f" path="res://extern/Inter-VariableFont_slnt,wght.ttf" id="4_h4t08"]
[ext_resource type="Texture2D" uid="uid://bmeold7ct003x" path="res://Lucidium.svg" id="4_u068o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ddiyh"]
bg_color = Color(0.109804, 0.129412, 0.156863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8v2gx"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_8ji7h"]
font_size = 10
font_color = Color(0.61339, 0.61339, 0.61339, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vf4l0"]
bg_color = Color(0.113725, 0.133333, 0.160784, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yiw1x"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_qmcka")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"Background"
theme_override_styles/panel = SubResource("StyleBoxFlat_ddiyh")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.0888889
anchor_right = 0.5
anchor_bottom = 0.9
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="Panel" parent="ScrollContainer/VBoxContainer" instance=ExtResource("3_2i0mj")]
layout_mode = 2

[node name="Lucidium" type="Sprite2D" parent="."]
position = Vector2(992, 144)
scale = Vector2(0.3125, 0.3125)
texture = ExtResource("4_u068o")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.355556
anchor_right = 0.95
anchor_bottom = 0.888889
tab_alignment = 1
current_tab = 1
metadata/_edit_use_anchors_ = true

[node name="Main Menu" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Main Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Main Menu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="TabContainer/Main Menu/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Main Menu/ScrollContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Welcome To Lucidium"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TabContainer/Main Menu/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="TabContainer/Main Menu/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Settings (NONFUNCTIONAL)"

[node name="New Map" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Panel" type="Panel" parent="TabContainer/New Map"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/New Map/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/New Map/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/New Map/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Uhh, there's nothing here."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TabContainer/New Map/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FailsafeNoMapMaking" type="RichTextLabel" parent="TabContainer/New Map/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("4_h4t08")
bbcode_enabled = true
text = "That's how it's supposed to be right now. The priority is to get everything accurate to Beat Saber, and saving Map Data is lower on my Priorities list. If you need an [b]actual[/b] editor, [url=https://cm.topc.at/dl]download ChroMapper.[/url] "

[node name="Load Map" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
alignment = 1
script = ExtResource("4_6ktwf")
metadata/_tab_index = 2

[node name="Input" type="VBoxContainer" parent="TabContainer/Load Map"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Load Map/Input"]
layout_mode = 2
text = "Beat Saver ID or Web Link (to a zip file)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="TabContainer/Load Map/Input"]
layout_mode = 2
placeholder_text = "25f or https://example.com"
alignment = 1

[node name="FILESYSTEM" type="VBoxContainer" parent="TabContainer/Load Map"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Load Map/FILESYSTEM"]
layout_mode = 2
text = "Filesystem"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabBar" type="TabBar" parent="TabContainer/Load Map/FILESYSTEM"]
layout_mode = 2
tab_alignment = 1
tab_count = 2
tab_0/title = "Map Directory"
tab_1/title = "USER DATA (Temporary)"

[node name="Button" type="Button" parent="TabContainer/Load Map"]
layout_mode = 2
text = "Download"

[node name="HTTPRequest" type="HTTPRequest" parent="TabContainer/Load Map"]

[node name="HELP" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.0888889
anchor_right = 0.5
anchor_bottom = 0.888889
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="HELP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HELP/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "There are no maps here, HELP!"
label_settings = SubResource("LabelSettings_8v2gx")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="HSeparator" type="HSeparator" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="d" type="Label" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "There's Two cases I can think of."
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="d2" type="Label" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "A: There are no maps in your CustomWIPLevels Directory"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="d3" type="Label" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "B: You haven't set your install directory correctly"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="d4" type="Label" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sidenote, to set it correctly, you need to use the *root* folder. If CustomWIPLevels is located within Beat Saber_Data, you need to select the Beat Saber_Data folder instead of the CustomWIPLevels folder. "
label_settings = SubResource("LabelSettings_8ji7h")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 162

[node name="HSeparator2" type="HSeparator" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="d5" type="Label" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "I can do two things for you."
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="d6" type="Label" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "A: Rescan '' for Maps"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 162

[node name="Rescan" type="Button" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_vf4l0")
text = "Rescan"

[node name="d7" type="Label" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "B: Send you back to reconfigure your Install Directory"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="Reconfigure" type="Button" parent="HELP/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_vf4l0")
text = "Reconfigure"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.0888889
text = "PRE ALPHA DEVELOPMENT BUILD - Expect Non-Functional, broken Jankiness and DO NOT use this in production to make maps without Acknowledging this."
label_settings = SubResource("LabelSettings_yiw1x")
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[connection signal="meta_clicked" from="TabContainer/New Map/Panel/MarginContainer/VBoxContainer/FailsafeNoMapMaking" to="." method="_on_failsafe_no_map_making_meta_clicked"]
[connection signal="pressed" from="TabContainer/Load Map/Button" to="TabContainer/Load Map" method="_on_button_pressed"]
[connection signal="pressed" from="HELP/MarginContainer/VBoxContainer/Rescan" to="." method="_on_rescan_pressed"]
[connection signal="pressed" from="HELP/MarginContainer/VBoxContainer/Reconfigure" to="." method="_on_reconfigure_pressed"]
